--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -1,14 +1,162 @@
+<!-- document.getElementById('title')
+
+document.getElementById('title').id
+'title'
+
+document.getElementById('title').class
+undefined
+
+document.getElementById('title').className
+'heading'
+
+document.getElementById('title').getAttribute
+ƒ getAttribute() { [native code] }
+
+document.getElementById('title').getAttribute()
+error
+
+document.getElementById('title').getAttribute(id)
+error
+
+document.getElementById('title').getAttribute('id')
+'title'
+
+document.getElementById('title').getAttribute('class')
+'heading' 
+
+title
+<h1 id=​"title" class=​"test heading">​DOM learning on Chai aur code​</h1>​
+
+title.style.backgroundColor('Voilet')
+error
+
+title.style.backgroundColor = 'Voilet'
+'Voilet'
+
+title.style.backgroundColor = 'green'
+'green'
+
+title.style.backgroundColor = 'violet'
+'violet'
+
+title.style.padding = '2em'
+'2em'
+
+title.style.borderRadius = '2em'
+'2em'
+
+title.innerText
+'DOM learning on Chai aur code'
+
+title.textContent
+'\n        DOM learning on Chai aur code\n         test text \n      '
+
+title.innerHTML
+'\n        DOM learning on Chai aur code\n        <span style="display: none"> test text </span>\n      '
+
+document.querySelector('h2')
+<h2>​Lorem ipsum dolor sit.​</h2>​
+
+document.querySelector('.heading')
+<h1 id=​"title" class=​"heading">​…​</h1>​
+
+document.querySelector('#title')
+
+const myul = document.querySelector('ul')
+undefined
+
+const turnGreen = myul.querySelector('li')
+undefined
+
+turnGreen.style.backgroundColor = 'green'
+'green'
+
+turnGreen.style.padding = "1em"
+'1em'
+
+turnGreen.innerText = 'Taher Babuji'
+'Taher Babuji'
+
+document.querySelectorAll('li')
+NodeList(3) [li, li, li]
+
+const tempLiList = document.querySelectorAll('li')
+undefined
+
+tempLiList
+NodeList(3) [li, li, li]0: li1: li2: lilength: 3[[Prototype]]: NodeListentries: ƒ entries()forEach: ƒ forEach()item: ƒ item()keys: ƒ keys()length: (...)values: ƒ values()constructor: ƒ NodeList()Symbol(Symbol.iterator): ƒ values()Symbol(Symbol.toStringTag): "NodeList"get length: ƒ length()[[Prototype]]: Objectconstructor: ƒ Object()hasOwnProperty: ƒ hasOwnProperty()isPrototypeOf: ƒ isPrototypeOf()propertyIsEnumerable: ƒ propertyIsEnumerable()toLocaleString: ƒ toLocaleString()toString: ƒ toString()valueOf: ƒ valueOf()__defineGetter__: ƒ __defineGetter__()__defineSetter__: ƒ __defineSetter__()__lookupGetter__: ƒ __lookupGetter__()__lookupSetter__: ƒ __lookupSetter__()__proto__: (...)get __proto__: ƒ __proto__()set __proto__: ƒ __proto__()
+
+const myArr = [1,2,3,4,5]
+undefined
+
+myArr
+(5) [1, 2, 3, 4, 5]0: 11: 22: 33: 44: 5length: 5[[Prototype]]: Array(0)at: ƒ at()concat: ƒ concat()constructor: ƒ Array()copyWithin: ƒ copyWithin()entries: ƒ entries()every: ƒ every()fill: ƒ fill()filter: ƒ filter()find: ƒ find()findIndex: ƒ findIndex()findLast: ƒ findLast()findLastIndex: ƒ findLastIndex()flat: ƒ flat()flatMap: ƒ flatMap()forEach: ƒ forEach()includes: ƒ includes()indexOf: ƒ indexOf()join: ƒ join()keys: ƒ keys()lastIndexOf: ƒ lastIndexOf()length: 0map: ƒ map()pop: ƒ pop()push: ƒ push()reduce: ƒ reduce()reduceRight: ƒ reduceRight()reverse: ƒ reverse()shift: ƒ shift()slice: ƒ slice()some: ƒ some()sort: ƒ sort()splice: ƒ splice()toLocaleString: ƒ toLocaleString()toReversed: ƒ toReversed()toSorted: ƒ toSorted()toSpliced: ƒ toSpliced()toString: ƒ toString()unshift: ƒ unshift()values: ƒ values()with: ƒ with()Symbol(Symbol.iterator): ƒ values()Symbol(Symbol.unscopables): {at: true, copyWithin: true, entries: true, fill: true, find: true, …}[[Prototype]]: Object
+
+tempLiList.style.color = "green"
+error
+
+tempLiList.style.colour = "green"
+error
+
+tempLiList[0].style.color = "red"
+'red'
+
+tempLiList.forEach((l) => {
+    l.style.backgroundColor = "green"
+}) 
+
+document.getElementsByClassName('list-item')
+HTMLCollection(4) [li.list-item, li.list-item, li.list-item, li.list-item]
+
+const tempClassList = document.getElementsByClassName('list-item')
+undefined
+
+tempClassList
+HTMLCollection(4) [li.list-item, li.list-item, li.list-item, li.list-item]
+
+tempClassList.forEach((l) => {
+    console.log(l)
+})
+error
+
+myH2.forEach((h) => {
+    h.style.color = "Black";
+    h.style.backgroundColor = "Brown";
+    h.style.padding = "2em";
+})
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM learning</title>
+    <style>
+      .bg-black {
+        background-color: #212121;
+        color: #fff;
+      }
+    </style>
   </head>
-  <body>
-    <div class="bg-black">
-      <h1 class="heading">DOM learning on Chai aur code</h1>
+  <body class="bg-black">
+    <div>
+      <h1 id="title" class="heading">
+        DOM learning on Chai aur code
+        <span style="display: none"> test text </span>
+      </h1>
+      <h2>Lorem ipsum dolor sit.</h2>
+      <h2>Lorem ipsum dolor sit.</h2>
+      <h2>Lorem ipsum dolor sit.</h2>
       <p>Lorem ipsum dolor sit amet.</p>
+      <input type="password" name="" id="" />
+
+      <ul>
+        <li class="list-item">one</li>
+        <li class="list-item">two</li>
+        <li class="list-item">three</li>
+        <li class="list-item">four</li>
+      </ul>
     </div>
   </body>
 </html>
