--- a/06_dom/one.html
+++ b/06_dom/one.html
@@ -145,6 +145,9 @@ myH2.forEach((h) => {
         DOM learning on Chai aur code
         <span style="display: none"> test text </span>
       </h1>
+      <!-- By using innerText method we will only get the text which is visible.
+      while by using textContent method we will also get the text which are not visible. 
+      And by using innerHTML method we will get all the html which is written inside a particular div.-->
       <h2>Lorem ipsum dolor sit.</h2>
       <h2>Lorem ipsum dolor sit.</h2>
       <h2>Lorem ipsum dolor sit.</h2>
