--- a/06_dom/two.html
+++ b/06_dom/two.html
@@ -15,26 +15,23 @@
   </body>
   <script>
     const parent = document.querySelector(".parent");
-
     // console.log(parent);
     // console.log(parent.children);
     // console.log(parent.children[1].innerHTML);
 
     // for (let i = 0; i < parent.children.length; i++) {
-    //   console.log(parent.children[i].innerHTML)
+    //   console.log(parent.children[i]);
     // }
 
-    parent.children[1].style.color = "orange";
-    // parent.children[1].style.padding = "1em"
-
-    // console.log(parent.firstElementChild)
-    // console.log(parent.lastElementChild)
+    parent.children[1].style.color = "grey";
+    console.log(parent.firstElementChild);
+    console.log(parent.lastElementChild);
 
     const dayOne = document.querySelector(".day");
     // console.log(dayOne);
     // console.log(dayOne.parentElement);
     // console.log(dayOne.nextElementSibling);
 
-    console.log("NODES: ",parent.childNodes)
+    console.log(parent.childNodes)
   </script>
 </html>
