--- a/08_events/one.html
+++ b/08_events/one.html
@@ -58,9 +58,9 @@
     </div>
   </body>
   <script>
-    document.getElementById("owl").onclick = () => {
-        alert("owl clickeddd")
-    };
+    // document.getElementById("owl").onclick = () => {
+    //     alert("owl clickeddd")
+    // };
 
     //atachEvent
     //jQuery - on
